# MCP-Model-context-protocol

./: .env.example  .gitignore  Dockerfile  LICENSE  MCP Capstone v3 Final.docx  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
attacks/: README.md
attacks/01_tool_poisoning/: README.md  exploit.py  vulnerable_server.py
attacks/02_indirect_prompt_injection/: README.md  exploit.py  vulnerable_server.py
attacks/03_command_injection/: README.md  exploit.py  vulnerable_server.py
attacks/04_path_traversal/: README.md  exploit.py  vulnerable_server.py
attacks/05_ssrf/: README.md  exploit.py  vulnerable_server.py
attacks/06_token_theft/: README.md  exploit.py  vulnerable_server.py
attacks/07_rug_pull/: README.md  exploit.py  vulnerable_server.py
attacks/08_excessive_permissions/: README.md  exploit.py  vulnerable_server.py
attacks/09_data_exfiltration/: README.md  exploit.py  vulnerable_server.py
attacks/10_sql_injection/: README.md  exploit.py  vulnerable_server.py
attacks/11_template_injection/: README.md  exploit.py  vulnerable_server.py
attacks/12_tool_shadowing/: README.md  exploit.py  malicious_server.py  trusted_server.py
attacks/13_insecure_deserialization/: README.md  exploit.py  vulnerable_server.py
attacks/14_broken_access_control/: README.md  exploit.py  vulnerable_server.py
attacks/15_unrestricted_file_write/: README.md  exploit.py  vulnerable_server.py
attacks/16_weak_randomness/: README.md  exploit.py  vulnerable_server.py
attacks/17_output_injection/: README.md  exploit.py  vulnerable_server.py
attacks/18_eval_injection/: README.md  exploit.py  vulnerable_server.py
attacks/19_zip_slip/: README.md  exploit.py  vulnerable_server.py
attacks/20_mass_assignment/: README.md  exploit.py  vulnerable_server.py
attacks/21_csv_injection/: README.md  exploit.py  vulnerable_server.py
configs/attack_configs/: matrix.yaml
configs/policies/: default_policy.yaml
defense/: README.md  checklist.md
defense/hardened_servers/: safe_calculator.py  safe_fetcher.py  safe_filesystem.py  safe_notes.py
servers/calculator/: server.py
servers/filesystem/: server.py
servers/notes/: server.py
servers/web_fetch/: server.py
src/: benchmark.py  config.py  environment.py  taxonomy.py
src/automation/: __init__.py  engine.py  scheduler.py  watchers.py
src/cli/: __init__.py  main.py
src/cryptomcp/: __init__.py  cli.py
src/defenselab/: __init__.py  arena.py  report.py  simulator.py
src/governance/: __init__.py
src/guardrails/: __init__.py  approval.py  authz.py  csvsafe.py  descriptions.py  exec_guard.py  framing.py  net.py  paths.py  ratelimit.py  registry.py  safe_eval.py  secrets.py  serialization.py  sqlsafe.py  templating.py  tokens.py
src/gui/: __init__.py  app.py  theme.py
src/host/: __init__.py  agent.py  client.py
src/installer/: __init__.py  clients.py
src/mcpoisoner/: __init__.py  cli.py
src/mcpshield/: __init__.py  cli.py
src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
tests/: test_environment.py  test_taxonomy.py
tests/automation/: test_engine.py
tests/cryptomcp/: test_merkle.py  test_signing.py
tests/defenselab/: test_arena.py  test_simulator.py
(+64 files in other folders)
