[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-security-suite"
version = "2.0.0"
description = "Attacking, Defending, Governing, and Cryptographically Securing MCP Tool Ecosystems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Krishita" },
]
keywords = ["mcp", "security", "ai-agents", "supply-chain", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "pynacl>=1.5.0",
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
    "scikit-learn>=1.4.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "structlog>=24.1.0",
    "matplotlib>=3.8.0",
    "plotly>=5.19.0",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "hypothesis>=6.98.0",
]
gui = [
    "pyside6>=6.7.0",
]
crewai = [
    "crewai>=0.80.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
all-frameworks = [
    "crewai>=0.80.0",
    "pyautogen>=0.2.0",
]
semantic = [
    "sentence-transformers>=2.5.0",
]

[project.scripts]
mcpoisoner = "mcpoisoner.cli:main"
mcpshield = "mcpshield.cli:main"
cryptomcp = "cryptomcp.cli:main"
mcp-security = "cli.main:app"
mcp-gui = "gui:run"

[project.urls]
Homepage = "https://github.com/Krishita17/MCP-Model-context-protocol"
Documentation = "https://github.com/Krishita17/MCP-Model-context-protocol/docs"
Repository = "https://github.com/Krishita17/MCP-Model-context-protocol"
Issues = "https://github.com/Krishita17/MCP-Model-context-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpoisoner", "src/mcpshield", "src/cryptomcp", "src/governance", "src/gui", "src/cli", "src/defenselab", "src/automation", "src/providers", "src/host", "src/installer", "src/guardrails", "src/config.py", "src/taxonomy.py", "src/benchmark.py", "src/environment.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "attack: marks attack simulation tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
